--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^2.6.5",
     "highlight.js": "^9.15.10",
     "marked": "^0.7.0",
+    "moment": "^2.26.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
