--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "highlight.js": "^9.15.10",
+    "js-cookie": "^2.2.1",
     "marked": "^0.7.0",
     "moment": "^2.26.0",
     "vue": "^2.6.10",
