--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "marked": "^0.7.0",
     "moment": "^2.26.0",
     "vue": "^2.6.10",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
