--- a/package.json
+++ b/package.json
@@ -5,17 +5,14 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --report",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "ant-design-vue": "^1.3.15",
     "core-js": "^2.6.5",
     "js-cookie": "^2.2.1",
-    "vue": "^2.6.10",
-    "vue-lazyload": "^1.3.3",
-    "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vue-lazyload": "^1.3.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
