--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ant-design-vue": "^1.3.15",
     "core-js": "^2.6.5",
+    "dayjs": "^1.9.4",
     "js-cookie": "^2.2.1",
     "vue-lazyload": "^1.3.3"
   },
