--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-standard": "^4.0.0",
+    "antd-dayjs-webpack-plugin": "^1.0.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.12.0",
     "compression-webpack-plugin": "^3.1.0",
