--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd-dayjs-webpack-plugin": "^1.0.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.12.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "compression-webpack-plugin": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
