--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "blog-front",
   "version": "0.1.0",
+  "description": "yucihzz'blog front",
   "private": true,
   "scripts": {
     "start": "npm run dev",
